# libpwntools

./: .gitignore  CMakeLists.txt  CMakeSettings.txt  LICENSE  Makefile  README.md  ayylmao  exp  exp.cpp  mujs  pwntools.h  vuln
.github/workflows/: main.yml
examples/: rop.c
examples/deaslr_pwnabletw/: Makefile  exp  exp.cpp
examples/dreamvm_dreamhack/: Makefile  dreamvm  exp  exp.cc
examples/file_example/: Makefile  exp  exp.cc
examples/fmtstr_payload/: fmtstr.cc
examples/rop/: bof  bof.c  exp  exp.cc  exploit.cc  main
examples/sropexample/: Makefile  exp  exp.cc
examples/tcache_tear/: .gdb_history  Makefile  exp  exp.cc
exploit_template/: Makefile  README.md  exp  exp.cc
src/: .clang-format  .gdb_history  .pwntools.h.swp  .pwntools.swp  .utils.cc.swp  CMakeLists.txt  CMakeSettings.json  Makefile  Socket.cc  Socket.cpp  Socket.h  build.sh  build_shared.sh  elf.cc  elf.h  exp  exp.cpp  fmtstr.cc  fmtstr.h  io.cc  io.h  logger.cc  logger.h  main  main.cc  main.cpp  process  process.cc  process.h  pwnelf.h  pwntools  pwntools.cc  pwntools.h  remote.cc  remote.h  solve.cc  src  utils.cc  utils.h
src/libpwntools/: CMakeLists.txt  elf.h  fmtstr.cc  io.cc  logger.cc  logger.h  main.cc  process.cc  process.h  pwntools.cc  pwntools.h  remote.cc  remote.h  utils.cc  utils.h
src/libpwntools/src/: fmtstr.cc  io.h  process.h  pwntools.cc  remote.h  utils.cc
src/libpwntools/test/: Makefile  exp.cc
src/pe_parser/: main.cpp  pe.cc  pe.h  pe_definitions.h  pefile_definitions.h
test/: Makefile  exp  exp.cpp  fire
test_windows_proc/: process.cpp
test_windows_proc/win_impl/: winlibpwntools.sln
test_windows_proc/win_impl/Debug/: winlibpwntools.ilk
test_windows_proc/win_impl/winlibpwntools/: Process.cpp  Process.h  example.cpp  winlibpwntools.cpp  winlibpwntools.vcxproj  winlibpwntools.vcxproj.filters
test_windows_proc/win_impl/winlibpwntools/Debug/: vc142.idb  winlibpwntools.exe.recipe
test_windows_proc/win_impl/winlibpwntools/Debug/winlibpwntools.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  winlibpwntools.lastbuildstate
